apps/cabot-cup-next/migrations/000001-initial/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: cabot-cup-postgres-direct
  labels:
    app.kubernetes.io/name: cabot-cup
    app.kubernetes.io/component: database-migration
spec:
  clusterIP: None
  publishNotReadyAddresses: false
  selector:
    cnpg.io/cluster: masters-pool-postgres
    cnpg.io/instanceRole: primary
  ports:
    - name: postgres
      protocol: TCP
      port: 5432
      targetPort: postgres
