apps/cabot-cup-next/migrations/000001-initial/network-policy.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: cabot-cup-migrate-000001
  labels:
    app.kubernetes.io/name: cabot-cup
    app.kubernetes.io/component: database-migration
spec:
  podSelector:
    matchLabels:
      app.kubernetes.io/name: cabot-cup
      app.kubernetes.io/component: database-migration
      app.kubernetes.io/version: "000001"
  policyTypes:
    - Ingress
    - Egress
  egress:
    - to:
        - namespaceSelector:
            matchLabels:
              kubernetes.io/metadata.name: kube-system
      ports:
        - protocol: UDP
          port: 53
        - protocol: TCP
          port: 53
    - to:
        - namespaceSelector:
            matchLabels:
              kubernetes.io/metadata.name: databases
          podSelector:
            matchLabels:
              cnpg.io/cluster: masters-pool-postgres
      ports:
        - protocol: TCP
          port: 5432
